--- a/gem.html
+++ b/gem.html
@@ -34,7 +34,7 @@
     <!-- 主應用程式容器 -->
     <div class="bg-white rounded-2xl shadow-xl w-full max-w-2xl p-8">
         <h1 class="text-4xl font-bold text-center text-gray-800 mb-2">🔶 Gem 生成器 🔶</h1>
-        <p class="text-center text-gray-600 mb-8">輸入您的想法，讓 Gemini 為您打造可重複使用的 Gem 範本！</p>
+        <p class="text-center text-gray-600 mb-8">輸入您的想法，讓Gem 生成器為您打造可重複使用的 Gem 範本！</p>
 
         <!-- 輸入區域 -->
         <div class="mb-6">
