--- a/gem.html
+++ b/gem.html
@@ -5,8 +5,15 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
  
     <title>Gem 生成器</title>
-    <!-- favicon 標籤頁logo -->
+    <!-- favicon 標籤頁logo 
     <link rel="icon" href="/VELVET_favicon.ico" type="image/svg+xml">
+    -->
+    
+    <!-- 新版 favicon (SVG) -->
+    <link rel="icon" type="image/svg+xml" href="/favicon.svg">
+    
+    <!-- 備用 favicon (PNG/ICO) 給不支援的瀏覽器 -->
+    <link rel="alternate icon" type="image/x-icon" href="/favicon.ico">
 
  
     <script src="https://cdn.tailwindcss.com"></script>
