--- a/gem_2.html
+++ b/gem_2.html
@@ -148,7 +148,7 @@
             const workerUrl = "https://feixu-proxy-gem.svcopcc.workers.dev/api/gemini";
 
             try {
-                const response = await fetch(apiUrl, {
+                const response = await fetch(workerUrl, {
                     method: 'POST',
                     headers: { 'Content-Type': 'application/json' },
                     body: JSON.stringify(payload)
