--- a/gem.html
+++ b/gem.html
@@ -137,7 +137,7 @@
                 role: "user",
                 parts: [{ text: 
                 `請根據這個想法，為我寫一個可用於 Gemini 的 Gems 範本。  
-                輸出格式必須至少包含以下四個欄位，(可增加提示：使用者要輸入、提供哪些資訊...等)：  
+                輸出格式必須至少包含以下四個欄位，(可增加提示：使用者要提供哪些資訊...等)：  
                 
                 title: <標題>  
                 description: |  
@@ -148,7 +148,7 @@
                   - <範例提示 1>  
                   - <範例提示 2>  
                 
-                請務必以 YAML 格式回傳，且四個欄位都要存在。  
+                請務必以 YAML 格式回傳，且四個欄位都要存在，包含用途說明和一個範例提示。  
                 想法：${prompt}`
                 }]
             }];
