--- a/gem.html
+++ b/gem.html
@@ -148,7 +148,7 @@
                   - <範例提示 1>  
                   - <範例提示 2>  
                 
-                請務必以 YAML 格式回傳，且四個欄位都要存在，包含用途說明和一個範例提示。  
+                請務必以 YAML 格式回傳，且四個欄位都要存在，包含一個範例提示。  
                 想法：${prompt}`
                 }]
             }];
